cmake_minimum_required(VERSION 3.8)
project(vehicle_control)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

file(GLOB_RECURSE SRC_FILE src/*.cpp)

include_directories(include)
add_executable(control_node ${SRC_FILE})

ament_target_dependencies(control_node rclcpp sensor_msgs geometry_msgs)

install(
  TARGETS 
  control_node  
  DESTINATION 
  lib/${PROJECT_NAME}
)

ament_package()
